--- a/Starbuzz/app/src/main/AndroidManifest.xml
+++ b/Starbuzz/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="it.bjfu.chennan.stopwatch">
+    package="it.bjfu.chennan.starbuzz">
 
     <application
         android:allowBackup="true"
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StopwatchActivity">
+        <activity android:name=".TopLevelActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CustomDialogActivity" android:theme="@android:style/Theme.Dialog">
-        </activity>
+        <activity android:name=".DrinkCategoryActivity" />
+        <activity android:name=".DrinkActivity"></activity>
     </application>
 
 </manifest>
