--- a/WombleService/app/src/main/AndroidManifest.xml
+++ b/WombleService/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name=".WombleService"
             android:exported="false" />
         <service
-            android:name=".WomblrService"
+            android:name=".WombleService"
             android:exported="false"></service>
     </application>
 
